# mCodingBot

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json.example  mypy.ini  noxfile.py  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
mcodingbot/: __main__.py  bot.py  config.py  model.py
mcodingbot/database/: converters.py  database.py
mcodingbot/database/migrations/0000/: describe.json  migrations.sql
mcodingbot/database/migrations/0001/: describe.json  migrations.sql
mcodingbot/database/migrations/0002/: migrations.sql
mcodingbot/database/models/: __init__.py  highlight.py  user.py  user_highlight.py  user_word.py  word.py
mcodingbot/plugins/: basic.py  bot_management.py  donors.py  highlights.py  info.py  joke.py  peps.py  python.py  reactions.py  stats.py
mcodingbot/tasks/: stats.py
mcodingbot/utils/: __init__.py  crescent.py  peps.py  plugin.py  plugins.py  search.py
