[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "mcodingbot"
version = "0.1.0"
description = "The Discord bot for the mCoding Discord server."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
hikari = "^2.0.0.dev110"
hikari-crescent = "^0.3.3"
apgorm = "^1.0.0b12"
rapidfuzz = "^2.10.0"
cachetools = "^5.2.0"
types-cachetools = "^5.2.1"

[tool.poetry.dev-dependencies]
nox = "^2022.8.7"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
